--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "react-scripts": "5.0.1",
     "react-time-ago": "^7.2.1",
     "socket.io-client": "^4.5.4",
+    "stable": "^0.1.8",
+    "svgo": "^3.3.2",
     "uuid": "^9.0.0",
     "web-vitals": "^2.1.4"
   },
