--- a/.env
+++ b/.env
@@ -1,3 +1,4 @@
+# REACT_APP_API_URL=http://localhost:8000
 REACT_APP_API_URL=https://uiux-backend.onrender.com
 
 REACT_APP_GOOGLE_OAUTH_REDIRECT_URL=http://localhost:8000/auth/google/oauth
